syntax="proto3";

package gophkeeper;

option go_package = "gophkeeper/proto";

message AuthLoginRequest{
  string login=1;
  string password=2;
}
message AuthLoginResponse{
  string error=1;
}
message GetDataRequest{
  string data_id=1;
}
message Data{
  string data_id=1;
  string data=2;
  string meta_info=3;

}
message GetDataResponse{
  Data data=1;
  string error =2;
}

message AddDataRequest{
  Data data=1;
}
message AddDelDataResponse{
  string error=1;
}
message SynchronizationRequest{
  string login=1;
}
message SynchronizationResponse{
  repeated Data data=1;
}
service Gophkeeper{
  rpc Login(AuthLoginRequest) returns (AuthLoginResponse);
  rpc Auth(AuthLoginRequest) returns (AuthLoginResponse);
  rpc AddData(AddDataRequest) returns (AddDelDataResponse);
  rpc GetData(GetDataRequest)returns (GetDataResponse);
  rpc Sync(SynchronizationRequest)returns (SynchronizationResponse);
  rpc DelData(GetDataRequest)returns (AddDelDataResponse);
}